[gd_scene load_steps=7 format=3 uid="uid://c7kyntgy4sqt6"]

[ext_resource type="Script" path="res://addons/twitch_node/auth_window/twitch_auth_window.gd" id="1_fpl08"]
[ext_resource type="Script" path="res://addons/twitch_node/auth_window/twitch_auth.gd" id="2_2sx86"]
[ext_resource type="Script" path="res://addons/twitch_node/auth_window/scopes_button.gd" id="3_d2y36"]
[ext_resource type="PackedScene" uid="uid://d7yuxq0qv4y8" path="res://addons/twitch_node/auth_window/token_line.tscn" id="3_sh2bu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hyf55"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hfv6g"]

[node name="TwitchAuthWindow" type="Window" node_paths=PackedStringArray("twitch_auth")]
auto_translate_mode = 1
title = "Twitch Credentials"
initial_position = 2
size = Vector2i(700, 450)
min_size = Vector2i(700, 450)
script = ExtResource("1_fpl08")
twitch_auth = NodePath("PanelContainer/TwitchAuth")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(0.572534, 0.27454, 1, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hyf55")

[node name="TwitchAuth" type="MarginContainer" parent="PanelContainer" node_paths=PackedStringArray("application_id_input", "application_secret_container", "application_secret_input", "line_container", "auth_type_dropdown", "scopes_button", "generate_token_button", "help_label")]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("2_2sx86")
application_id_input = NodePath("VBoxContainer/ClientId/ClientIdInput")
application_secret_container = NodePath("VBoxContainer/ClientSecret")
application_secret_input = NodePath("VBoxContainer/ClientSecret/ClientSecretInput")
line_container = NodePath("VBoxContainer/TokenContainer")
auth_type_dropdown = NodePath("VBoxContainer/Actions/GrantTypeDropdown")
scopes_button = NodePath("VBoxContainer/Actions/ScopesButton")
generate_token_button = NodePath("VBoxContainer/Actions/GenerateTokenButton")
help_label = NodePath("VBoxContainer/MarginContainer/RichTextLabel")
token_line_scene = ExtResource("3_sh2bu")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/TwitchAuth"]
layout_mode = 2

[node name="GrantType" type="HBoxContainer" parent="PanelContainer/TwitchAuth/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/TwitchAuth/VBoxContainer/GrantType"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Authorization Grant Type"

[node name="ClientId" type="HBoxContainer" parent="PanelContainer/TwitchAuth/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/TwitchAuth/VBoxContainer/ClientId"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Application Client ID *"

[node name="ClientIdInput" type="LineEdit" parent="PanelContainer/TwitchAuth/VBoxContainer/ClientId"]
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
secret = true

[node name="ClientSecret" type="HBoxContainer" parent="PanelContainer/TwitchAuth/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/TwitchAuth/VBoxContainer/ClientSecret"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Application Client Secret *"

[node name="ClientSecretInput" type="LineEdit" parent="PanelContainer/TwitchAuth/VBoxContainer/ClientSecret"]
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
secret = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/TwitchAuth/VBoxContainer"]
layout_mode = 2

[node name="TokenContainer" type="VBoxContainer" parent="PanelContainer/TwitchAuth/VBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/TwitchAuth/VBoxContainer"]
layout_mode = 2

[node name="Actions" type="HBoxContainer" parent="PanelContainer/TwitchAuth/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/TwitchAuth/VBoxContainer/Actions"]
layout_mode = 2
text = "Add new token:"

[node name="GrantTypeDropdown" type="OptionButton" parent="PanelContainer/TwitchAuth/VBoxContainer/Actions"]
layout_mode = 2
selected = 1
item_count = 2
popup/item_0/text = "Implicit"
popup/item_1/text = "Auth code"
popup/item_1/id = 1

[node name="ScopesButton" type="MenuButton" parent="PanelContainer/TwitchAuth/VBoxContainer/Actions"]
layout_mode = 2
text = "Select scopes"
flat = false
script = ExtResource("3_d2y36")

[node name="GenerateTokenButton" type="Button" parent="PanelContainer/TwitchAuth/VBoxContainer/Actions"]
layout_mode = 2
text = "Generate token"

[node name="RefreshButton" type="Button" parent="PanelContainer/TwitchAuth/VBoxContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 10
text = "Refresh info"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TwitchAuth/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_top = 18

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/TwitchAuth/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 2
theme_override_font_sizes/normal_font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_hfv6g")
text = "* Create an application in the Twitch Dev Console (https://dev.twitch.tv/console) and copy the Client ID to the Application Client ID field. Make sure the OAuth Redirect URL is set to https://redirectmeto.com/http://localhost:7345

** Have a browser session open logged in to the channel account when clicking the Create New Token button.

*** Have a browser session open logged in to the bot account when clicking the Create New Token button."
fit_content = true
selection_enabled = true

[node name="Label" type="Label" parent="PanelContainer/TwitchAuth/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "
* Create an application in the Twitch Dev Console (https://dev.twitch.tv/console) and copy the Client ID. Make sure the OAuth Redirect URL is set to https://redirectmeto.com/http://localhost:7345

** Have a browser session open logged in to the channel account when clicking the Create New Token button.

*** Have a browser session open logged in to the bot account when clicking the Create New Token button."
autowrap_mode = 2

[node name="Button" type="Button" parent="PanelContainer/TwitchAuth"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Close"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="PanelContainer/TwitchAuth/VBoxContainer/ClientId/ClientIdInput" to="PanelContainer/TwitchAuth" method="on_client_id_changed"]
[connection signal="text_changed" from="PanelContainer/TwitchAuth/VBoxContainer/ClientSecret/ClientSecretInput" to="PanelContainer/TwitchAuth" method="on_client_secret_changed"]
[connection signal="item_selected" from="PanelContainer/TwitchAuth/VBoxContainer/Actions/GrantTypeDropdown" to="PanelContainer/TwitchAuth" method="on_auth_type_selected"]
[connection signal="pressed" from="PanelContainer/TwitchAuth/VBoxContainer/Actions/GenerateTokenButton" to="PanelContainer/TwitchAuth" method="on_generate_token_button_pressed"]
[connection signal="pressed" from="PanelContainer/TwitchAuth/VBoxContainer/Actions/RefreshButton" to="PanelContainer/TwitchAuth" method="_refresh_token_info"]
[connection signal="pressed" from="PanelContainer/TwitchAuth/Button" to="." method="_on_close_requested"]
